--- a/BBS/src/main/webapp/css/mainpage2.css
+++ b/BBS/src/main/webapp/css/mainpage2.css
@@ -45,9 +45,21 @@ hr{
 
 
 /***************************************************************************************************************************/
+html,
 body{
-	margin: 0px;
+	margin: 0;
+	padding : 0;
+	height : 100%;
 }
+.container{
+	min-height:100%;
+	position : relative;
+}
+#myCarousel{
+	margin-top:100px;
+	padding-bottom: 200px;
+}
+
 
 .totalContainer{
 	margin: 0px 0px 50px 0px;
@@ -435,11 +447,16 @@ input:focus{border: none; outline: none;}
 
 /* 푸터 */
 footer{
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+
 	background-color: #1c1d1f;
+	
+    width: 100%;
+    height: 200px; /* footer의 높이 */
+    position: absolute;  
+    bottom: 0;
+    left: 0;
+    
+    
 }
 
 .siteInfoConatiner{
@@ -449,7 +466,7 @@ footer{
 	letter-spacing: -0.3px;
 	line-height: 22px;
 	position: relative;
-	right: 580px;
+	left: 100px;
 }
 
 .makerInfoConatiner{
@@ -459,6 +476,6 @@ footer{
 	letter-spacing: -0.3px;
 	line-height: 22px;
 	position: relative;
-	right: 580px;
+	left: 100px;
 	margin-top: 13px;
 }
