--- a/BBS/src/main/webapp/css/mainpage2.css
+++ b/BBS/src/main/webapp/css/mainpage2.css
@@ -54,10 +54,20 @@ body{
 .container{
 	min-height:100%;
 	position : relative;
+	align-items: center;
+	justify-content: center;
+	
+	
 }
 #myCarousel{
 	margin-top:100px;
+	margin-bottom:10px;
 	padding-bottom: 200px;
+	width: 720px;
+	height: 500px;
+	
+	width: 100%;
+	text-align: center;
 }
 
 
@@ -94,6 +104,13 @@ a:visited {
 a:hover {
 	text-decoration: none;
 }
+
+.wrapper{
+	display: flex;
+	align-items: center;
+	
+}
+
 
 /* 헤더 전체를 감싸는 컨테이너 */
 .headerContainer{
@@ -452,7 +469,7 @@ footer{
 	
     width: 100%;
     height: 200px; /* footer의 높이 */
-    position: absolute;  
+    position: relative;  
     bottom: 0;
     left: 0;
     
