--- a/BBS/src/main/webapp/css/board.css
+++ b/BBS/src/main/webapp/css/board.css
@@ -5,6 +5,9 @@
 @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 700;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.otf) format('opentype');}
 @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 900;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.otf) format('opentype');}
 
+@import url(http://fonts.googleleapis.com/earlyaccess/nanumgothic.css);
+@import url(http://fonts.googleleapis.com/earlyaccess/hanna.css);
+
 /********************************************************/
 html{
 	font-family: 'Noto Sans KR', sans-serif;
@@ -57,7 +60,7 @@ body{
 	height: 62px;
 }
 #board{
-	font-family: 'Noto Sans KR', sans-serif;
+	font-family: 'Nanum Gothic', sans-serif;
 	font-size: 14px;
 	cursor: pointer;
 	background: transparent;
@@ -75,7 +78,7 @@ body{
 
 /* 헤더에 있는 로그인 버튼  */
 #login{
-	font-family: 'Noto Sans KR', sans-serif;
+	font-family: 'Nanum Gothic', sans-serif;
 	font-size: 14px;
 	cursor: pointer;
 	background: transparent;
@@ -85,7 +88,7 @@ body{
 	border: 0px;
 }
 #logout{
-	font-family: 'Noto Sans KR', sans-serif;
+	font-family: 'Nanum Gothic', sans-serif;
 	font-size: 14px;
 	font-weight: 500;
 	cursor: pointer;
@@ -107,7 +110,7 @@ body{
 
 /* 헤더에 있는 회원가입 버튼  */
 #signUp{
-	font-family: 'Noto Sans KR', sans-serif;
+	font-family: 'Nanum Gothic', sans-serif;
 	font-size: 14px;
 	font-weight: 500;
 	cursor: pointer;
